--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,6 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-
-#find_package(LibArchive REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
 
 set(MAIN_SOURCES
@@ -36,16 +34,7 @@ set(MAIN_UI_SOURCES
 add_executable(main ${MAIN_SOURCES} ${MAIN_UI_SOURCES})
 target_include_directories(main PRIVATE include)
 target_link_libraries(main PUBLIC Qt6::Widgets Qt6::Core)
-#target_link_libraries(main PRIVATE LibArchive::LibArchive)
 qt_finalize_executable(main)
 
-
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
-add_library(stardewPlugin SHARED plugins/stardew.cpp)
-target_link_libraries(stardewPlugin Qt6::Core)
-
-add_library(testPlugin SHARED plugins/testplug.cpp)
-target_link_libraries(testPlugin Qt6::Core)
-
-add_library(balatroPlugin SHARED plugins/balatro.cpp)
-target_link_libraries(balatroPlugin Qt6::Core)
+add_subdirectory(plugins ${CMAKE_BINARY_DIR}/plugin_build)
